--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: Build and Push to ECR - Just Simply Pushing to ECR
+name: Deploy Backend to ECS
 
 on:
   push:
@@ -6,36 +6,65 @@ on:
       - main
 
 env:
-  AWS_REGION: ${{ secrets.AWS_REGION }}
-  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-  IMAGE_TAG: latest
+  AWS_REGION: eu-north-1
+  ECR_REPOSITORY: demo-backend
+  ECS_CLUSTER: demo-backend-fullstack
+  ECS_SERVICE: demo-backend-fullstack-service-ov97sqm7
+  CONTAINER_NAME: demo-backend
 
 jobs:
-  build:
-    name: Build and Push Docker image to Amazon ECR
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 1️⃣ Configure AWS credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ env.AWS_REGION }}
 
+      # 2️⃣ Login to Amazon ECR
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build Docker image
+      # 3️⃣ Build, Tag, and Push Docker Image to ECR
+      - name: Build, Tag, and Push Docker image
+        id: build-image
         run: |
-          docker build -t demo-backend .
-          docker tag demo-backend:latest 804878519643.dkr.ecr.eu-north-1.amazonaws.com/demo-backend:latest
+          IMAGE_TAG=latest
+          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
 
-      - name: Push image to ECR
-        run: |
-          docker push 804878519643.dkr.ecr.eu-north-1.amazonaws.com/demo-backend:latest
+          echo "Building Docker image..."
+          docker build -t $ECR_REPOSITORY .
+
+          echo "Tagging image..."
+          docker tag $ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+          echo "Pushing image to ECR..."
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      # 4️⃣ Render new ECS task definition with latest image
+      - name: Render new ECS task definition
+        id: render-task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ecs-task-def.json
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ steps.build-image.outputs.image }}
+
+      # 5️⃣ Deploy new task definition to ECS
+      - name: Deploy to Amazon ECS
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
